JavaDoc de casi todo, Fix tests y Fix Exepciones